[package]
name = "failsafe_slack_bot"
version = "0.0.0"
authors = ["Jan Harasym <jan.harasym@massive.se>"]

[dependencies]
slack_api    = "0.23.1"
ssh          = "0.1.4"
const_env    = "0.1.2"
slack        = "0.25.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies.reqwest_]
package = "reqwest"
version = "0.10"
optional = true
default-features = false
features = ["gzip"]

[dependencies.async-trait]
package = "async-trait"
version = "0.1"
optional = true

[features]
default = ["reqwest", "with_native_tls"]
async = ["async-trait"]
sync = []
reqwest = ["reqwest_", "async"]
reqwest_blocking = ["reqwest_/blocking", "sync"]
with_rustls = ["reqwest_/rustls-tls"]
with_native_tls = ["reqwest_/native-tls"]
